[tool.poetry]
name = "wagtail-wordpress-connector"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^6.2.2"
jmespath = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
