[tool.poetry]
name = "wagtail-wordpress-connector"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]
readme = "README.md"
packages = [
    { include = "commands", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "~6.4"
django = "~5.1"
beautifulsoup4 = "~4.12"
jmespath = "^1.0.1"
requests = "^2.32.3"
rich-click = "^1.8.3"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "6.0.0"
flake8 = "7.1.2"
coverage = "7.6.12"
responses = "0.25.6"
pre-commit = "4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wp = "commands.cli:wp"
wt = "commands.cli:wt"
dj = "commands.cli:dj"

i = "commands.inspector:i"
a = "commands.anchor_links:a"
